fix(landing): bg issues on smaller screens

--- a/src/app/module/landing/landing.component.scss
+++ b/src/app/module/landing/landing.component.scss
@@ -10,20 +10,21 @@
   flex-direction: column;
   height: calc(100vh - #{$header-height});
   justify-content: center;
+  max-height: calc(1280px - #{$header-height});
   min-height: 900px;
+  position: relative;
 
   &__bg {
-    height: 100vh;
+    bottom: 0;
+    display: flex;
     left: 0;
     pointer-events: none;
     position: absolute;
     right: 0;
-    top: 0;
+    top: -$header-height;
 
     img {
       height: 100%;
-      max-height: 100%;
-      max-width: 100%;
       object-fit: cover;
       opacity: .1;
       width: 100%;
